# lnauth-django

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.cfg
lnauth_django/: apps.py  django.py  django_auth.py  exceptions.py  lnauth.py  models.py  service.py  urls.py  views.py
lnauth_django/migrations/: 0000_initial.py
lnauth_django/tests/: conftest.py  test_django.py  test_service.py
