[tool.poetry]
name = "lnauth-django"
version = "0.1.0"
description = ""
authors = ["zwx00 <blaz@bolt.observer>"]
readme = "README.md"
packages = [{include = "lnauth_django"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
